@@ -140,6 +140,58 @@ SUFFIXPROFILEPREFIX = 'suffix_profile_'
 schema = Schema((
 
     StringField(
+        name='folderTitle',
+        widget=StringField._properties['widget'](
+            size=70,
+            description="FolderTitle",
+            description_msgid="folder_title_descr",
+            label='Foldertitle',
+            label_msgid='PloneMeeting_label_folderTitle',
+            i18n_domain='PloneMeeting',
+        ),
+        required=True,
+        write_permission="PloneMeeting: Write risky config",
+    ),
+    StringField(
+        name='shortName',
+        widget=StringField._properties['widget'](
+            description="ShortName",
+            description_msgid="short_name_descr",
+            condition="python: here.isTemporary()",
+            label='Shortname',
+            label_msgid='PloneMeeting_label_shortName',
+            i18n_domain='PloneMeeting',
+        ),
+        required=True,
+        write_permission="PloneMeeting: Write risky config",
+    ),
+    BooleanField(
+        name='isDefault',
+        default=defValues.isDefault,
+        widget=BooleanField._properties['widget'](
+            description="IsDefault",
+            description_msgid="config_is_default_descr",
+            label='Isdefault',
+            label_msgid='PloneMeeting_label_isDefault',
+            i18n_domain='PloneMeeting',
+        ),
+        write_permission="PloneMeeting: Write risky config",
+    ),
+    StringField(
+        name='itemIconColor',
+        default=defValues.itemIconColor,
+        widget=SelectionWidget(
+            description="ItemIconColor",
+            description_msgid="item_icon_color_descr",
+            label='Itemiconcolor',
+            label_msgid='PloneMeeting_label_itemIconColor',
+            i18n_domain='PloneMeeting',
+        ),
+        enforceVocabulary=True,
+        write_permission="PloneMeeting: Write risky config",
+        vocabulary='listItemIconColors',
+    ),
+    StringField(
         name='configGroup',
         default=defValues.configGroup,
         widget=SelectionWidget(
@@ -152,6 +204,83 @@ schema = Schema((
         enforceVocabulary=True,
         write_permission="PloneMeeting: Write risky config",
         vocabulary='listConfigGroups',
+    ),
+    TextField(
+        name='places',
+        default=defValues.places,
+        allowable_content_types=('text/plain',),
+        widget=TextAreaWidget(
+            description="Places",
+            description_msgid="places_descr",
+            label='Places',
+            label_msgid='PloneMeeting_label_places',
+            i18n_domain='PloneMeeting',
+        ),
+        default_content_type='text/plain',
+        write_permission="PloneMeeting: Write risky config",
+    ),
+    IntegerField(
+        name='lastMeetingNumber',
+        default=defValues.lastMeetingNumber,
+        widget=IntegerField._properties['widget'](
+            description="LastMeetingNumber",
+            description_msgid="last_meeting_number_descr",
+            label='Lastmeetingnumber',
+            label_msgid='PloneMeeting_label_lastMeetingNumber',
+            i18n_domain='PloneMeeting',
+        ),
+        write_permission="PloneMeeting: Write risky config",
+    ),
+    BooleanField(
+        name='yearlyInitMeetingNumber',
+        default=defValues.yearlyInitMeetingNumber,
+        widget=BooleanField._properties['widget'](
+            description="YearlyInitMeetingNumber",
+            description_msgid="yearly_init_meeting_nb_descr",
+            label='Yearlyinitmeetingnumber',
+            label_msgid='PloneMeeting_label_yearlyInitMeetingNumber',
+            i18n_domain='PloneMeeting',
+        ),
+        write_permission="PloneMeeting: Write risky config",
+    ),
+    TextField(
+        name='budgetDefault',
+        widget=RichWidget(
+            description="BudgetDefault",
+            description_msgid="config_budget_default_descr",
+            label='Budgetdefault',
+            label_msgid='PloneMeeting_label_budgetDefault',
+            i18n_domain='PloneMeeting',
+        ),
+        default_content_type="text/html",
+        default=defValues.budgetDefault,
+        allowable_content_types=('text/html',),
+        default_output_type="text/x-html-safe",
+        write_permission="PloneMeeting: Write risky config",
+    ),
+    StringField(
+        name='configVersion',
+        default=defValues.configVersion,
+        widget=StringField._properties['widget'](
+            description="ConfigVersion",
+            description_msgid="config_version_descr",
+            label='Configversion',
+            label_msgid='PloneMeeting_label_configVersion',
+            i18n_domain='PloneMeeting',
+        ),
+        write_permission="PloneMeeting: Write risky config",
+    ),
+    BooleanField(
+        name='itemCreatedOnlyUsingTemplate',
+        default=defValues.itemCreatedOnlyUsingTemplate,
+        widget=BooleanField._properties['widget'](
+            description="ItemCreatedOnlyUsingTemplate",
+            description_msgid="item_created_only_using_template_descr",
+            label='Itemcreatedonlyusingtemplate',
+            label_msgid='PloneMeeting_label_itemCreatedOnlyUsingTemplate',
+            i18n_domain='PloneMeeting',
+        ),
+        write_permission="PloneMeeting: Write risky config",
     ),
     TextField(
         name='assembly',
@@ -260,150 +389,6 @@ schema = Schema((
         default=defValues.orderedContacts,
         enforceVocabulary=True,
         write_permission="PloneMeeting: Write harmless config",
-    ),
-    TextField(
-        name='places',
-        default=defValues.places,
-        allowable_content_types=('text/plain',),
-        widget=TextAreaWidget(
-            description="Places",
-            description_msgid="places_descr",
-            label='Places',
-            label_msgid='PloneMeeting_label_places',
-            i18n_domain='PloneMeeting',
-        ),
-        default_content_type='text/plain',
-        write_permission="PloneMeeting: Write risky config",
-    ),
-    TextField(
-        name='budgetDefault',
-        widget=RichWidget(
-            description="BudgetDefault",
-            description_msgid="config_budget_default_descr",
-            label='Budgetdefault',
-            label_msgid='PloneMeeting_label_budgetDefault',
-            i18n_domain='PloneMeeting',
-        ),
-        default_content_type="text/html",
-        default=defValues.budgetDefault,
-        allowable_content_types=('text/html',),
-        default_output_type="text/x-html-safe",
-        write_permission="PloneMeeting: Write risky config",
-    ),
-    TextField(
-        name='defaultMeetingItemMotivation',
-        widget=RichWidget(
-            description="DefaultMeetingItemMotivation",
-            description_msgid="config_default_meetingitem_motivation_descr",
-            label='Defaultmeetingitemmotivation',
-            label_msgid='PloneMeeting_label_defaultMeetingItemMotivation',
-            i18n_domain='PloneMeeting',
-        ),
-        default_content_type="text/html",
-        default=defValues.defaultMeetingItemMotivation,
-        allowable_content_types=('text/html',),
-        default_output_type="text/x-html-safe",
-        write_permission="PloneMeeting: Write risky config",
-    ),
-    StringField(
-        name='folderTitle',
-        widget=StringField._properties['widget'](
-            size=70,
-            description="FolderTitle",
-            description_msgid="folder_title_descr",
-            label='Foldertitle',
-            label_msgid='PloneMeeting_label_folderTitle',
-            i18n_domain='PloneMeeting',
-        ),
-        required=True,
-        write_permission="PloneMeeting: Write risky config",
-    ),
-    StringField(
-        name='shortName',
-        widget=StringField._properties['widget'](
-            description="ShortName",
-            description_msgid="short_name_descr",
-            condition="python: here.isTemporary()",
-            label='Shortname',
-            label_msgid='PloneMeeting_label_shortName',
-            i18n_domain='PloneMeeting',
-        ),
-        required=True,
-        write_permission="PloneMeeting: Write risky config",
-    ),
-    BooleanField(
-        name='isDefault',
-        default=defValues.isDefault,
-        widget=BooleanField._properties['widget'](
-            description="IsDefault",
-            description_msgid="config_is_default_descr",
-            label='Isdefault',
-            label_msgid='PloneMeeting_label_isDefault',
-            i18n_domain='PloneMeeting',
-        ),
-        write_permission="PloneMeeting: Write risky config",
-    ),
-    StringField(
-        name='itemIconColor',
-        default=defValues.itemIconColor,
-        widget=SelectionWidget(
-            description="ItemIconColor",
-            description_msgid="item_icon_color_descr",
-            label='Itemiconcolor',
-            label_msgid='PloneMeeting_label_itemIconColor',
-            i18n_domain='PloneMeeting',
-        ),
-        enforceVocabulary=True,
-        write_permission="PloneMeeting: Write risky config",
-        vocabulary='listItemIconColors',
-    ),
-    IntegerField(
-        name='lastMeetingNumber',
-        default=defValues.lastMeetingNumber,
-        widget=IntegerField._properties['widget'](
-            description="LastMeetingNumber",
-            description_msgid="last_meeting_number_descr",
-            label='Lastmeetingnumber',
-            label_msgid='PloneMeeting_label_lastMeetingNumber',
-            i18n_domain='PloneMeeting',
-        ),
-        write_permission="PloneMeeting: Write risky config",
-    ),
-    BooleanField(
-        name='yearlyInitMeetingNumber',
-        default=defValues.yearlyInitMeetingNumber,
-        widget=BooleanField._properties['widget'](
-            description="YearlyInitMeetingNumber",
-            description_msgid="yearly_init_meeting_nb_descr",
-            label='Yearlyinitmeetingnumber',
-            label_msgid='PloneMeeting_label_yearlyInitMeetingNumber',
-            i18n_domain='PloneMeeting',
-        ),
-        write_permission="PloneMeeting: Write risky config",
-    ),
-    StringField(
-        name='configVersion',
-        default=defValues.configVersion,
-        widget=StringField._properties['widget'](
-            description="ConfigVersion",
-            description_msgid="config_version_descr",
-            label='Configversion',
-            label_msgid='PloneMeeting_label_configVersion',
-            i18n_domain='PloneMeeting',
-        ),
-        write_permission="PloneMeeting: Write risky config",
-    ),
-    BooleanField(
-        name='itemCreatedOnlyUsingTemplate',
-        default=defValues.itemCreatedOnlyUsingTemplate,
-        widget=BooleanField._properties['widget'](
-            description="ItemCreatedOnlyUsingTemplate",
-            description_msgid="item_created_only_using_template_descr",
-            label='Itemcreatedonlyusingtemplate',
-            label_msgid='PloneMeeting_label_itemCreatedOnlyUsingTemplate',
-            i18n_domain='PloneMeeting',
-        ),
-        write_permission="PloneMeeting: Write risky config",
     ),
     LinesField(
         name='usedItemAttributes',
