@@ -15,6 +15,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Added field MeetingItem.textCheckList useable on item templates so Managers can define what is necessary for
   the item to be considered "complete"
 - Highlight person_label and held_position_label when displaying contacts on the MeetingConfig view
+- Removed useless field MeetingConfig.defaultMeetingItemMotivation, use an item template instead to manage it,
+  moreover, not very relevant as item motivation changes from item purpose to item purpose
+- Reordered MeetingConfig default fields (fields appearing in first tab)
 
 4.1b13 (2018-12-04)
 -------------------
